parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> kotlinFile
Rule 1     kotlinFile -> functionDeclaration kotlinFile
Rule 2     kotlinFile -> functionDeclaration
Rule 3     functionDeclaration -> FUN ID functionValueParameters functionBody
Rule 4     functionDeclaration -> FUN ID functionValueParameters DOISP type functionBody
Rule 5     functionValueParameters -> LPAREN parameters RPAREN
Rule 6     functionValueParameters -> LPAREN RPAREN
Rule 7     parameters -> parameter
Rule 8     parameters -> parameter COMMA parameters
Rule 9     parameter -> ID DOISP type
Rule 10    type -> parenthesizedType
Rule 11    type -> ID
Rule 12    parenthesizedType -> LPAREN type RPAREN
Rule 13    functionBody -> block
Rule 14    functionBody -> ATRIBUICAO expression
Rule 15    statements -> statement
Rule 16    statements -> statement statements
Rule 17    statement -> open_statement
Rule 18    statement -> closed_statement
Rule 19    open_statement -> IF LPAREN expression RPAREN block
Rule 20    open_statement -> IF LPAREN expression RPAREN statement
Rule 21    open_statement -> IF LPAREN expression RPAREN block ELSE open_statement
Rule 22    open_statement -> IF LPAREN expression RPAREN closed_statement ELSE open_statement
Rule 23    open_statement -> FOR LPAREN genericVariableDeclaration IN expression RPAREN open_statement
Rule 24    open_statement -> WHILE LPAREN expression RPAREN open_statement
Rule 25    open_statement -> DO open_statement WHILE LPAREN expression RPAREN
Rule 26    closed_statement -> non_if_statement_block
Rule 27    closed_statement -> IF LPAREN expression RPAREN block ELSE block
Rule 28    closed_statement -> IF LPAREN expression RPAREN closed_statement ELSE block
Rule 29    closed_statement -> IF LPAREN expression RPAREN block ELSE closed_statement
Rule 30    closed_statement -> IF LPAREN expression RPAREN closed_statement ELSE closed_statement
Rule 31    closed_statement -> FOR LPAREN genericVariableDeclaration IN expression RPAREN closed_statement
Rule 32    closed_statement -> WHILE LPAREN expression RPAREN closed_statement
Rule 33    closed_statement -> DO closed_statement WHILE LPAREN expression RPAREN
Rule 34    non_if_statement_block -> FOR LPAREN genericVariableDeclaration IN expression RPAREN block
Rule 35    non_if_statement_block -> WHILE LPAREN expression RPAREN block
Rule 36    non_if_statement_block -> DO block WHILE LPAREN expression RPAREN
Rule 37    non_if_statement_block -> PV
Rule 38    non_if_statement_block -> propertyDeclarationStm
Rule 39    non_if_statement_block -> assignment
Rule 40    non_if_statement_block -> chamadaDeFuncao
Rule 41    non_if_statement_block -> jumpExpression
Rule 42    assignment -> ID ATRIBUICAO expression
Rule 43    assignment -> ID assignmentAndOperator expression
Rule 44    block -> LCHAVE statements RCHAVE
Rule 45    propertyDeclarationStm -> VAR genericVariableDeclaration ATRIBUICAO expression
Rule 46    propertyDeclarationStm -> VAL genericVariableDeclaration ATRIBUICAO expression
Rule 47    chamadaDeFuncao -> ID LPAREN RPAREN
Rule 48    chamadaDeFuncao -> ID LPAREN parametersFunction RPAREN
Rule 49    genericVariableDeclaration -> multiVariableDeclaration
Rule 50    genericVariableDeclaration -> variableDeclaration
Rule 51    variableDeclaration -> ID DOISP type
Rule 52    variableDeclaration -> ID
Rule 53    variableDeclarations -> variableDeclaration
Rule 54    variableDeclarations -> variableDeclaration COMMA variableDeclarations
Rule 55    multiVariableDeclaration -> LPAREN variableDeclarations RPAREN
Rule 56    multiVariableDeclaration -> LPAREN RPAREN
Rule 57    parametersFunction -> primaryExpression
Rule 58    parametersFunction -> primaryExpression COMMA parametersFunction
Rule 59    expression -> disjunction
Rule 60    disjunction -> conjunction
Rule 61    disjunction -> disjunction OR conjunction
Rule 62    conjunction -> equality
Rule 63    conjunction -> conjunction AND equality
Rule 64    equality -> comparison
Rule 65    equality -> equality equalityOperator comparison
Rule 66    comparison -> infixOperation
Rule 67    comparison -> infixOperation comparisonOperator infixOperation
Rule 68    infixOperation -> infixOperation inOperator elvisExpression
Rule 69    infixOperation -> infixOperation isOperator type
Rule 70    infixOperation -> elvisExpression
Rule 71    elvisExpression -> rangeExpression
Rule 72    elvisExpression -> elvisExpression ELVIS rangeExpression
Rule 73    rangeExpression -> additiveExpression
Rule 74    rangeExpression -> rangeExpression PONTOPONTO additiveExpression
Rule 75    additiveExpression -> multiplicativeExpression
Rule 76    additiveExpression -> additiveExpression additiveOperator multiplicativeExpression
Rule 77    multiplicativeExpression -> asExpression
Rule 78    multiplicativeExpression -> multiplicativeExpression multiplicativeOperator asExpression
Rule 79    asExpression -> unaryExpression
Rule 80    asExpression -> unaryExpression asOperator type
Rule 81    unaryExpression -> unaryOperator primaryExpression
Rule 82    unaryExpression -> primaryExpression
Rule 83    unaryExpression -> primaryExpression postfixUnaryOperator
Rule 84    postfixUnaryOperator -> INCREMENTO
Rule 85    postfixUnaryOperator -> DECREMENTO
Rule 86    primaryExpression -> NULL
Rule 87    primaryExpression -> TRUE
Rule 88    primaryExpression -> FALSE
Rule 89    primaryExpression -> NUMBER
Rule 90    primaryExpression -> LITERAL_STRING
Rule 91    primaryExpression -> ID
Rule 92    primaryExpression -> chamadaDeFuncao
Rule 93    primaryExpression -> parenthesizedExpression
Rule 94    jumpExpression -> RETURN expression
Rule 95    jumpExpression -> CONTINUE
Rule 96    jumpExpression -> BREAK
Rule 97    parenthesizedExpression -> LPAREN expression RPAREN
Rule 98    assignmentAndOperator -> MAISIGUAL
Rule 99    assignmentAndOperator -> MENOSIGUAL
Rule 100   assignmentAndOperator -> MULTIGUAL
Rule 101   assignmentAndOperator -> DIVIGUAL
Rule 102   assignmentAndOperator -> MODIGUAL
Rule 103   equalityOperator -> DIFERENTE
Rule 104   equalityOperator -> IDENTIDADE
Rule 105   equalityOperator -> IGUALDADE
Rule 106   equalityOperator -> SEMIDENTIDADE
Rule 107   comparisonOperator -> MENOR
Rule 108   comparisonOperator -> MAIOR
Rule 109   comparisonOperator -> MENORIGUAL
Rule 110   comparisonOperator -> MAIORIGUAL
Rule 111   inOperator -> IN
Rule 112   inOperator -> NOT_IN
Rule 113   isOperator -> IS
Rule 114   isOperator -> NOT_IS
Rule 115   additiveOperator -> PLUS
Rule 116   additiveOperator -> MINUS
Rule 117   multiplicativeOperator -> MULT
Rule 118   multiplicativeOperator -> DIVIDE
Rule 119   multiplicativeOperator -> MOD
Rule 120   asOperator -> AS
Rule 121   asOperator -> AS asOperator
Rule 122   unaryOperator -> INCREMENTO
Rule 123   unaryOperator -> DECREMENTO
Rule 124   unaryOperator -> MINUS
Rule 125   unaryOperator -> PLUS
Rule 126   unaryOperator -> NOT

Terminals, with rules where they appear

AND                  : 63
AS                   : 120 121
ATRIBUICAO           : 14 42 45 46
BREAK                : 96
COMMA                : 8 54 58
CONTINUE             : 95
DECREMENTO           : 85 123
DIFERENTE            : 103
DIVIDE               : 118
DIVIGUAL             : 101
DO                   : 25 33 36
DOISP                : 4 9 51
ELSE                 : 21 22 27 28 29 30
ELVIS                : 72
FALSE                : 88
FOR                  : 23 31 34
FUN                  : 3 4
ID                   : 3 4 9 11 42 43 47 48 51 52 91
IDENTIDADE           : 104
IF                   : 19 20 21 22 27 28 29 30
IGUALDADE            : 105
IN                   : 23 31 34 111
INCREMENTO           : 84 122
IS                   : 113
LCHAVE               : 44
LITERAL_STRING       : 90
LPAREN               : 5 6 12 19 20 21 22 23 24 25 27 28 29 30 31 32 33 34 35 36 47 48 55 56 97
MAIOR                : 108
MAIORIGUAL           : 110
MAISIGUAL            : 98
MENOR                : 107
MENORIGUAL           : 109
MENOSIGUAL           : 99
MINUS                : 116 124
MOD                  : 119
MODIGUAL             : 102
MULT                 : 117
MULTIGUAL            : 100
NOT                  : 126
NOT_IN               : 112
NOT_IS               : 114
NULL                 : 86
NUMBER               : 89
OR                   : 61
PLUS                 : 115 125
PONTOPONTO           : 74
PV                   : 37
RCHAVE               : 44
RETURN               : 94
RPAREN               : 5 6 12 19 20 21 22 23 24 25 27 28 29 30 31 32 33 34 35 36 47 48 55 56 97
SEMIDENTIDADE        : 106
TRUE                 : 87
VAL                  : 46
VAR                  : 45
WHILE                : 24 25 32 33 35 36
error                : 

Nonterminals, with rules where they appear

additiveExpression   : 73 74 76
additiveOperator     : 76
asExpression         : 77 78
asOperator           : 80 121
assignment           : 39
assignmentAndOperator : 43
block                : 13 19 21 27 27 28 29 34 35 36
chamadaDeFuncao      : 40 92
closed_statement     : 18 22 28 29 30 30 31 32 33
comparison           : 64 65
comparisonOperator   : 67
conjunction          : 60 61 63
disjunction          : 59 61
elvisExpression      : 68 70 72
equality             : 62 63 65
equalityOperator     : 65
expression           : 14 19 20 21 22 23 24 25 27 28 29 30 31 32 33 34 35 36 42 43 45 46 94 97
functionBody         : 3 4
functionDeclaration  : 1 2
functionValueParameters : 3 4
genericVariableDeclaration : 23 31 34 45 46
inOperator           : 68
infixOperation       : 66 67 67 68 69
isOperator           : 69
jumpExpression       : 41
kotlinFile           : 1 0
multiVariableDeclaration : 49
multiplicativeExpression : 75 76 78
multiplicativeOperator : 78
non_if_statement_block : 26
open_statement       : 17 21 22 23 24 25
parameter            : 7 8
parameters           : 5 8
parametersFunction   : 48 58
parenthesizedExpression : 93
parenthesizedType    : 10
postfixUnaryOperator : 83
primaryExpression    : 57 58 81 82 83
propertyDeclarationStm : 38
rangeExpression      : 71 72 74
statement            : 15 16 20
statements           : 16 44
type                 : 4 9 12 51 69 80
unaryExpression      : 79 80
unaryOperator        : 81
variableDeclaration  : 50 53 54
variableDeclarations : 54 55

Parsing method: LALR

state 0

    (0) S' -> . kotlinFile
    (1) kotlinFile -> . functionDeclaration kotlinFile
    (2) kotlinFile -> . functionDeclaration
    (3) functionDeclaration -> . FUN ID functionValueParameters functionBody
    (4) functionDeclaration -> . FUN ID functionValueParameters DOISP type functionBody

    FUN             shift and go to state 3

    kotlinFile                     shift and go to state 1
    functionDeclaration            shift and go to state 2

state 1

    (0) S' -> kotlinFile .



state 2

    (1) kotlinFile -> functionDeclaration . kotlinFile
    (2) kotlinFile -> functionDeclaration .
    (1) kotlinFile -> . functionDeclaration kotlinFile
    (2) kotlinFile -> . functionDeclaration
    (3) functionDeclaration -> . FUN ID functionValueParameters functionBody
    (4) functionDeclaration -> . FUN ID functionValueParameters DOISP type functionBody

    $end            reduce using rule 2 (kotlinFile -> functionDeclaration .)
    FUN             shift and go to state 3

    functionDeclaration            shift and go to state 2
    kotlinFile                     shift and go to state 4

state 3

    (3) functionDeclaration -> FUN . ID functionValueParameters functionBody
    (4) functionDeclaration -> FUN . ID functionValueParameters DOISP type functionBody

    ID              shift and go to state 5


state 4

    (1) kotlinFile -> functionDeclaration kotlinFile .

    $end            reduce using rule 1 (kotlinFile -> functionDeclaration kotlinFile .)


state 5

    (3) functionDeclaration -> FUN ID . functionValueParameters functionBody
    (4) functionDeclaration -> FUN ID . functionValueParameters DOISP type functionBody
    (5) functionValueParameters -> . LPAREN parameters RPAREN
    (6) functionValueParameters -> . LPAREN RPAREN

    LPAREN          shift and go to state 7

    functionValueParameters        shift and go to state 6

state 6

    (3) functionDeclaration -> FUN ID functionValueParameters . functionBody
    (4) functionDeclaration -> FUN ID functionValueParameters . DOISP type functionBody
    (13) functionBody -> . block
    (14) functionBody -> . ATRIBUICAO expression
    (44) block -> . LCHAVE statements RCHAVE

    DOISP           shift and go to state 9
    ATRIBUICAO      shift and go to state 11
    LCHAVE          shift and go to state 12

    functionBody                   shift and go to state 8
    block                          shift and go to state 10

state 7

    (5) functionValueParameters -> LPAREN . parameters RPAREN
    (6) functionValueParameters -> LPAREN . RPAREN
    (7) parameters -> . parameter
    (8) parameters -> . parameter COMMA parameters
    (9) parameter -> . ID DOISP type

    RPAREN          shift and go to state 14
    ID              shift and go to state 16

    parameters                     shift and go to state 13
    parameter                      shift and go to state 15

state 8

    (3) functionDeclaration -> FUN ID functionValueParameters functionBody .

    FUN             reduce using rule 3 (functionDeclaration -> FUN ID functionValueParameters functionBody .)
    $end            reduce using rule 3 (functionDeclaration -> FUN ID functionValueParameters functionBody .)


state 9

    (4) functionDeclaration -> FUN ID functionValueParameters DOISP . type functionBody
    (10) type -> . parenthesizedType
    (11) type -> . ID
    (12) parenthesizedType -> . LPAREN type RPAREN

    ID              shift and go to state 17
    LPAREN          shift and go to state 20

    type                           shift and go to state 18
    parenthesizedType              shift and go to state 19

state 10

    (13) functionBody -> block .

    FUN             reduce using rule 13 (functionBody -> block .)
    $end            reduce using rule 13 (functionBody -> block .)


state 11

    (14) functionBody -> ATRIBUICAO . expression
    (59) expression -> . disjunction
    (60) disjunction -> . conjunction
    (61) disjunction -> . disjunction OR conjunction
    (62) conjunction -> . equality
    (63) conjunction -> . conjunction AND equality
    (64) equality -> . comparison
    (65) equality -> . equality equalityOperator comparison
    (66) comparison -> . infixOperation
    (67) comparison -> . infixOperation comparisonOperator infixOperation
    (68) infixOperation -> . infixOperation inOperator elvisExpression
    (69) infixOperation -> . infixOperation isOperator type
    (70) infixOperation -> . elvisExpression
    (71) elvisExpression -> . rangeExpression
    (72) elvisExpression -> . elvisExpression ELVIS rangeExpression
    (73) rangeExpression -> . additiveExpression
    (74) rangeExpression -> . rangeExpression PONTOPONTO additiveExpression
    (75) additiveExpression -> . multiplicativeExpression
    (76) additiveExpression -> . additiveExpression additiveOperator multiplicativeExpression
    (77) multiplicativeExpression -> . asExpression
    (78) multiplicativeExpression -> . multiplicativeExpression multiplicativeOperator asExpression
    (79) asExpression -> . unaryExpression
    (80) asExpression -> . unaryExpression asOperator type
    (81) unaryExpression -> . unaryOperator primaryExpression
    (82) unaryExpression -> . primaryExpression
    (83) unaryExpression -> . primaryExpression postfixUnaryOperator
    (122) unaryOperator -> . INCREMENTO
    (123) unaryOperator -> . DECREMENTO
    (124) unaryOperator -> . MINUS
    (125) unaryOperator -> . PLUS
    (126) unaryOperator -> . NOT
    (86) primaryExpression -> . NULL
    (87) primaryExpression -> . TRUE
    (88) primaryExpression -> . FALSE
    (89) primaryExpression -> . NUMBER
    (90) primaryExpression -> . LITERAL_STRING
    (91) primaryExpression -> . ID
    (92) primaryExpression -> . chamadaDeFuncao
    (93) primaryExpression -> . parenthesizedExpression
    (47) chamadaDeFuncao -> . ID LPAREN RPAREN
    (48) chamadaDeFuncao -> . ID LPAREN parametersFunction RPAREN
    (97) parenthesizedExpression -> . LPAREN expression RPAREN

    INCREMENTO      shift and go to state 35
    DECREMENTO      shift and go to state 36
    MINUS           shift and go to state 37
    PLUS            shift and go to state 38
    NOT             shift and go to state 39
    NULL            shift and go to state 40
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42
    NUMBER          shift and go to state 43
    LITERAL_STRING  shift and go to state 44
    ID              shift and go to state 45
    LPAREN          shift and go to state 48

    expression                     shift and go to state 21
    disjunction                    shift and go to state 22
    conjunction                    shift and go to state 23
    equality                       shift and go to state 24
    comparison                     shift and go to state 25
    infixOperation                 shift and go to state 26
    elvisExpression                shift and go to state 27
    rangeExpression                shift and go to state 28
    additiveExpression             shift and go to state 29
    multiplicativeExpression       shift and go to state 30
    asExpression                   shift and go to state 31
    unaryExpression                shift and go to state 32
    unaryOperator                  shift and go to state 33
    primaryExpression              shift and go to state 34
    chamadaDeFuncao                shift and go to state 46
    parenthesizedExpression        shift and go to state 47

state 12

    (44) block -> LCHAVE . statements RCHAVE
    (15) statements -> . statement
    (16) statements -> . statement statements
    (17) statement -> . open_statement
    (18) statement -> . closed_statement
    (19) open_statement -> . IF LPAREN expression RPAREN block
    (20) open_statement -> . IF LPAREN expression RPAREN statement
    (21) open_statement -> . IF LPAREN expression RPAREN block ELSE open_statement
    (22) open_statement -> . IF LPAREN expression RPAREN closed_statement ELSE open_statement
    (23) open_statement -> . FOR LPAREN genericVariableDeclaration IN expression RPAREN open_statement
    (24) open_statement -> . WHILE LPAREN expression RPAREN open_statement
    (25) open_statement -> . DO open_statement WHILE LPAREN expression RPAREN
    (26) closed_statement -> . non_if_statement_block
    (27) closed_statement -> . IF LPAREN expression RPAREN block ELSE block
    (28) closed_statement -> . IF LPAREN expression RPAREN closed_statement ELSE block
    (29) closed_statement -> . IF LPAREN expression RPAREN block ELSE closed_statement
    (30) closed_statement -> . IF LPAREN expression RPAREN closed_statement ELSE closed_statement
    (31) closed_statement -> . FOR LPAREN genericVariableDeclaration IN expression RPAREN closed_statement
    (32) closed_statement -> . WHILE LPAREN expression RPAREN closed_statement
    (33) closed_statement -> . DO closed_statement WHILE LPAREN expression RPAREN
    (34) non_if_statement_block -> . FOR LPAREN genericVariableDeclaration IN expression RPAREN block
    (35) non_if_statement_block -> . WHILE LPAREN expression RPAREN block
    (36) non_if_statement_block -> . DO block WHILE LPAREN expression RPAREN
    (37) non_if_statement_block -> . PV
    (38) non_if_statement_block -> . propertyDeclarationStm
    (39) non_if_statement_block -> . assignment
    (40) non_if_statement_block -> . chamadaDeFuncao
    (41) non_if_statement_block -> . jumpExpression
    (45) propertyDeclarationStm -> . VAR genericVariableDeclaration ATRIBUICAO expression
    (46) propertyDeclarationStm -> . VAL genericVariableDeclaration ATRIBUICAO expression
    (42) assignment -> . ID ATRIBUICAO expression
    (43) assignment -> . ID assignmentAndOperator expression
    (47) chamadaDeFuncao -> . ID LPAREN RPAREN
    (48) chamadaDeFuncao -> . ID LPAREN parametersFunction RPAREN
    (94) jumpExpression -> . RETURN expression
    (95) jumpExpression -> . CONTINUE
    (96) jumpExpression -> . BREAK

    IF              shift and go to state 53
    FOR             shift and go to state 54
    WHILE           shift and go to state 55
    DO              shift and go to state 56
    PV              shift and go to state 58
    VAR             shift and go to state 63
    VAL             shift and go to state 64
    ID              shift and go to state 65
    RETURN          shift and go to state 66
    CONTINUE        shift and go to state 67
    BREAK           shift and go to state 68

    statements                     shift and go to state 49
    statement                      shift and go to state 50
    open_statement                 shift and go to state 51
    closed_statement               shift and go to state 52
    non_if_statement_block         shift and go to state 57
    propertyDeclarationStm         shift and go to state 59
    assignment                     shift and go to state 60
    chamadaDeFuncao                shift and go to state 61
    jumpExpression                 shift and go to state 62

state 13

    (5) functionValueParameters -> LPAREN parameters . RPAREN

    RPAREN          shift and go to state 69


state 14

    (6) functionValueParameters -> LPAREN RPAREN .

    DOISP           reduce using rule 6 (functionValueParameters -> LPAREN RPAREN .)
    ATRIBUICAO      reduce using rule 6 (functionValueParameters -> LPAREN RPAREN .)
    LCHAVE          reduce using rule 6 (functionValueParameters -> LPAREN RPAREN .)


state 15

    (7) parameters -> parameter .
    (8) parameters -> parameter . COMMA parameters

    RPAREN          reduce using rule 7 (parameters -> parameter .)
    COMMA           shift and go to state 70


state 16

    (9) parameter -> ID . DOISP type

    DOISP           shift and go to state 71


state 17

    (11) type -> ID .

    ATRIBUICAO      reduce using rule 11 (type -> ID .)
    LCHAVE          reduce using rule 11 (type -> ID .)
    RPAREN          reduce using rule 11 (type -> ID .)
    COMMA           reduce using rule 11 (type -> ID .)
    MENOR           reduce using rule 11 (type -> ID .)
    MAIOR           reduce using rule 11 (type -> ID .)
    MENORIGUAL      reduce using rule 11 (type -> ID .)
    MAIORIGUAL      reduce using rule 11 (type -> ID .)
    IN              reduce using rule 11 (type -> ID .)
    NOT_IN          reduce using rule 11 (type -> ID .)
    IS              reduce using rule 11 (type -> ID .)
    NOT_IS          reduce using rule 11 (type -> ID .)
    DIFERENTE       reduce using rule 11 (type -> ID .)
    IDENTIDADE      reduce using rule 11 (type -> ID .)
    IGUALDADE       reduce using rule 11 (type -> ID .)
    SEMIDENTIDADE   reduce using rule 11 (type -> ID .)
    AND             reduce using rule 11 (type -> ID .)
    OR              reduce using rule 11 (type -> ID .)
    FUN             reduce using rule 11 (type -> ID .)
    $end            reduce using rule 11 (type -> ID .)
    IF              reduce using rule 11 (type -> ID .)
    FOR             reduce using rule 11 (type -> ID .)
    WHILE           reduce using rule 11 (type -> ID .)
    DO              reduce using rule 11 (type -> ID .)
    PV              reduce using rule 11 (type -> ID .)
    VAR             reduce using rule 11 (type -> ID .)
    VAL             reduce using rule 11 (type -> ID .)
    ID              reduce using rule 11 (type -> ID .)
    RETURN          reduce using rule 11 (type -> ID .)
    CONTINUE        reduce using rule 11 (type -> ID .)
    BREAK           reduce using rule 11 (type -> ID .)
    RCHAVE          reduce using rule 11 (type -> ID .)
    ELSE            reduce using rule 11 (type -> ID .)
    MULT            reduce using rule 11 (type -> ID .)
    DIVIDE          reduce using rule 11 (type -> ID .)
    MOD             reduce using rule 11 (type -> ID .)
    PLUS            reduce using rule 11 (type -> ID .)
    MINUS           reduce using rule 11 (type -> ID .)
    PONTOPONTO      reduce using rule 11 (type -> ID .)
    ELVIS           reduce using rule 11 (type -> ID .)


state 18

    (4) functionDeclaration -> FUN ID functionValueParameters DOISP type . functionBody
    (13) functionBody -> . block
    (14) functionBody -> . ATRIBUICAO expression
    (44) block -> . LCHAVE statements RCHAVE

    ATRIBUICAO      shift and go to state 11
    LCHAVE          shift and go to state 12

    functionBody                   shift and go to state 72
    block                          shift and go to state 10

state 19

    (10) type -> parenthesizedType .

    ATRIBUICAO      reduce using rule 10 (type -> parenthesizedType .)
    LCHAVE          reduce using rule 10 (type -> parenthesizedType .)
    RPAREN          reduce using rule 10 (type -> parenthesizedType .)
    COMMA           reduce using rule 10 (type -> parenthesizedType .)
    MENOR           reduce using rule 10 (type -> parenthesizedType .)
    MAIOR           reduce using rule 10 (type -> parenthesizedType .)
    MENORIGUAL      reduce using rule 10 (type -> parenthesizedType .)
    MAIORIGUAL      reduce using rule 10 (type -> parenthesizedType .)
    IN              reduce using rule 10 (type -> parenthesizedType .)
    NOT_IN          reduce using rule 10 (type -> parenthesizedType .)
    IS              reduce using rule 10 (type -> parenthesizedType .)
    NOT_IS          reduce using rule 10 (type -> parenthesizedType .)
    DIFERENTE       reduce using rule 10 (type -> parenthesizedType .)
    IDENTIDADE      reduce using rule 10 (type -> parenthesizedType .)
    IGUALDADE       reduce using rule 10 (type -> parenthesizedType .)
    SEMIDENTIDADE   reduce using rule 10 (type -> parenthesizedType .)
    AND             reduce using rule 10 (type -> parenthesizedType .)
    OR              reduce using rule 10 (type -> parenthesizedType .)
    FUN             reduce using rule 10 (type -> parenthesizedType .)
    $end            reduce using rule 10 (type -> parenthesizedType .)
    IF              reduce using rule 10 (type -> parenthesizedType .)
    FOR             reduce using rule 10 (type -> parenthesizedType .)
    WHILE           reduce using rule 10 (type -> parenthesizedType .)
    DO              reduce using rule 10 (type -> parenthesizedType .)
    PV              reduce using rule 10 (type -> parenthesizedType .)
    VAR             reduce using rule 10 (type -> parenthesizedType .)
    VAL             reduce using rule 10 (type -> parenthesizedType .)
    ID              reduce using rule 10 (type -> parenthesizedType .)
    RETURN          reduce using rule 10 (type -> parenthesizedType .)
    CONTINUE        reduce using rule 10 (type -> parenthesizedType .)
    BREAK           reduce using rule 10 (type -> parenthesizedType .)
    RCHAVE          reduce using rule 10 (type -> parenthesizedType .)
    ELSE            reduce using rule 10 (type -> parenthesizedType .)
    MULT            reduce using rule 10 (type -> parenthesizedType .)
    DIVIDE          reduce using rule 10 (type -> parenthesizedType .)
    MOD             reduce using rule 10 (type -> parenthesizedType .)
    PLUS            reduce using rule 10 (type -> parenthesizedType .)
    MINUS           reduce using rule 10 (type -> parenthesizedType .)
    PONTOPONTO      reduce using rule 10 (type -> parenthesizedType .)
    ELVIS           reduce using rule 10 (type -> parenthesizedType .)


state 20

    (12) parenthesizedType -> LPAREN . type RPAREN
    (10) type -> . parenthesizedType
    (11) type -> . ID
    (12) parenthesizedType -> . LPAREN type RPAREN

    ID              shift and go to state 17
    LPAREN          shift and go to state 20

    type                           shift and go to state 73
    parenthesizedType              shift and go to state 19

state 21

    (14) functionBody -> ATRIBUICAO expression .

    FUN             reduce using rule 14 (functionBody -> ATRIBUICAO expression .)
    $end            reduce using rule 14 (functionBody -> ATRIBUICAO expression .)


state 22

    (59) expression -> disjunction .
    (61) disjunction -> disjunction . OR conjunction

    FUN             reduce using rule 59 (expression -> disjunction .)
    $end            reduce using rule 59 (expression -> disjunction .)
    RPAREN          reduce using rule 59 (expression -> disjunction .)
    IF              reduce using rule 59 (expression -> disjunction .)
    FOR             reduce using rule 59 (expression -> disjunction .)
    WHILE           reduce using rule 59 (expression -> disjunction .)
    DO              reduce using rule 59 (expression -> disjunction .)
    PV              reduce using rule 59 (expression -> disjunction .)
    VAR             reduce using rule 59 (expression -> disjunction .)
    VAL             reduce using rule 59 (expression -> disjunction .)
    ID              reduce using rule 59 (expression -> disjunction .)
    RETURN          reduce using rule 59 (expression -> disjunction .)
    CONTINUE        reduce using rule 59 (expression -> disjunction .)
    BREAK           reduce using rule 59 (expression -> disjunction .)
    RCHAVE          reduce using rule 59 (expression -> disjunction .)
    ELSE            reduce using rule 59 (expression -> disjunction .)
    OR              shift and go to state 74


state 23

    (60) disjunction -> conjunction .
    (63) conjunction -> conjunction . AND equality

    OR              reduce using rule 60 (disjunction -> conjunction .)
    FUN             reduce using rule 60 (disjunction -> conjunction .)
    $end            reduce using rule 60 (disjunction -> conjunction .)
    RPAREN          reduce using rule 60 (disjunction -> conjunction .)
    IF              reduce using rule 60 (disjunction -> conjunction .)
    FOR             reduce using rule 60 (disjunction -> conjunction .)
    WHILE           reduce using rule 60 (disjunction -> conjunction .)
    DO              reduce using rule 60 (disjunction -> conjunction .)
    PV              reduce using rule 60 (disjunction -> conjunction .)
    VAR             reduce using rule 60 (disjunction -> conjunction .)
    VAL             reduce using rule 60 (disjunction -> conjunction .)
    ID              reduce using rule 60 (disjunction -> conjunction .)
    RETURN          reduce using rule 60 (disjunction -> conjunction .)
    CONTINUE        reduce using rule 60 (disjunction -> conjunction .)
    BREAK           reduce using rule 60 (disjunction -> conjunction .)
    RCHAVE          reduce using rule 60 (disjunction -> conjunction .)
    ELSE            reduce using rule 60 (disjunction -> conjunction .)
    AND             shift and go to state 75


state 24

    (62) conjunction -> equality .
    (65) equality -> equality . equalityOperator comparison
    (103) equalityOperator -> . DIFERENTE
    (104) equalityOperator -> . IDENTIDADE
    (105) equalityOperator -> . IGUALDADE
    (106) equalityOperator -> . SEMIDENTIDADE

    AND             reduce using rule 62 (conjunction -> equality .)
    OR              reduce using rule 62 (conjunction -> equality .)
    FUN             reduce using rule 62 (conjunction -> equality .)
    $end            reduce using rule 62 (conjunction -> equality .)
    RPAREN          reduce using rule 62 (conjunction -> equality .)
    IF              reduce using rule 62 (conjunction -> equality .)
    FOR             reduce using rule 62 (conjunction -> equality .)
    WHILE           reduce using rule 62 (conjunction -> equality .)
    DO              reduce using rule 62 (conjunction -> equality .)
    PV              reduce using rule 62 (conjunction -> equality .)
    VAR             reduce using rule 62 (conjunction -> equality .)
    VAL             reduce using rule 62 (conjunction -> equality .)
    ID              reduce using rule 62 (conjunction -> equality .)
    RETURN          reduce using rule 62 (conjunction -> equality .)
    CONTINUE        reduce using rule 62 (conjunction -> equality .)
    BREAK           reduce using rule 62 (conjunction -> equality .)
    RCHAVE          reduce using rule 62 (conjunction -> equality .)
    ELSE            reduce using rule 62 (conjunction -> equality .)
    DIFERENTE       shift and go to state 77
    IDENTIDADE      shift and go to state 78
    IGUALDADE       shift and go to state 79
    SEMIDENTIDADE   shift and go to state 80

    equalityOperator               shift and go to state 76

state 25

    (64) equality -> comparison .

    DIFERENTE       reduce using rule 64 (equality -> comparison .)
    IDENTIDADE      reduce using rule 64 (equality -> comparison .)
    IGUALDADE       reduce using rule 64 (equality -> comparison .)
    SEMIDENTIDADE   reduce using rule 64 (equality -> comparison .)
    AND             reduce using rule 64 (equality -> comparison .)
    OR              reduce using rule 64 (equality -> comparison .)
    FUN             reduce using rule 64 (equality -> comparison .)
    $end            reduce using rule 64 (equality -> comparison .)
    RPAREN          reduce using rule 64 (equality -> comparison .)
    IF              reduce using rule 64 (equality -> comparison .)
    FOR             reduce using rule 64 (equality -> comparison .)
    WHILE           reduce using rule 64 (equality -> comparison .)
    DO              reduce using rule 64 (equality -> comparison .)
    PV              reduce using rule 64 (equality -> comparison .)
    VAR             reduce using rule 64 (equality -> comparison .)
    VAL             reduce using rule 64 (equality -> comparison .)
    ID              reduce using rule 64 (equality -> comparison .)
    RETURN          reduce using rule 64 (equality -> comparison .)
    CONTINUE        reduce using rule 64 (equality -> comparison .)
    BREAK           reduce using rule 64 (equality -> comparison .)
    RCHAVE          reduce using rule 64 (equality -> comparison .)
    ELSE            reduce using rule 64 (equality -> comparison .)


state 26

    (66) comparison -> infixOperation .
    (67) comparison -> infixOperation . comparisonOperator infixOperation
    (68) infixOperation -> infixOperation . inOperator elvisExpression
    (69) infixOperation -> infixOperation . isOperator type
    (107) comparisonOperator -> . MENOR
    (108) comparisonOperator -> . MAIOR
    (109) comparisonOperator -> . MENORIGUAL
    (110) comparisonOperator -> . MAIORIGUAL
    (111) inOperator -> . IN
    (112) inOperator -> . NOT_IN
    (113) isOperator -> . IS
    (114) isOperator -> . NOT_IS
